<resources>
    <string name="app_name">CarGPS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_fullName">中都物流</string>
    <string name="app_subTitle">质押车辆智能监控系统</string>


    <!-- base message -->
    <string name="message_title_success">成功</string>
    <string name="message_title_error">错误</string>
    <string name="message_title_hint">提示</string>
    <string name="message_net_error">网络错误！</string>
    <string name="message_serve_error">服务器错误！</string>
    <string name="save_success">保存成功！</string>
    <string name="save_failure">保存失败！</string>
    <string name="data_repeating">已存在，不可重复添加，请检查！</string>
    <string name="data_empty">无可用数据，请检查！</string>
    <string name="errorMsg_code0">处理数据出现未知错误，请联系管理员!\n code:0000</string><!--网络返回信息错误-->
    <string name="errorMsg_code1">处理数据出现未知错误，请联系管理员!\n code:0001</string><!--本地处理数据错误-->
    <string name="user_nr">账号</string>
    <string name="user_pwd">密码</string>
    <string name="user_nr_empty">账号不可为空！</string>
    <string name="user_pwd_empty">密码不可为空！</string>
    <string name="user_msg_error">用户信息不完整，请检查！</string>
    <string name="user_Permission_error">用户权限不完整或未分配，请检查！</string>
    <string name="user_nr_hint">请输入账号</string>
    <string name="user_pwd_hint">请输入密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="ip_port_msg">请输入完整的IP地址和端口号！</string>


    <!--button-->
    <string name="login">登录</string>
    <string name="setting">设置</string>
    <string name="save">保存</string>
    <string name="confirm">确定</string>
    <string name="commit">提交</string>
    <string name="cancel">取消</string>
    <string name="reset">重置</string>
    <string name="query">查询</string>
    <string name="delete">删除</string>
    <string name="savepwd">记住密码</string>
    <string name="create">新建</string>
    <string name="scan">扫描</string>
    <string name="signIn">扫描签到</string>


    <string name="ip">地址：</string>
    <string name="port">端口：</string>
    <string name="ipHint">示例：192.168.1.11</string>
    <string name="portHint">示例：8080</string>
    <string name="vinTitle">车架号：</string>
    <string name="carTypeTitle">车辆型号：</string>
    <string name="_4sTitle">所属4S店：</string>
    <string name="alarmShopTitle">报警商户：</string>
    <string name="deviceNrTitile">设备编号：</string>
    <string name="alarmTimeTitle">报警时间：</string>
    <string name="allRead">全部已读</string>
</resources>
