<com.cztek.concept.cargps.layout.FractionTranslateLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/loginbackground"
    tools:context="com.cztek.concept.cargps.activities.login.fragment.LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="100dp"
                android:layout_height="90dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_logo"/>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logoImageView"
                android:gravity="center"
                android:text="@string/app_fullName"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text1" />
            <TextView
                android:id="@+id/subTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titleTextView"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/app_subTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/textWhite"
                android:textSize="@dimen/text3" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true">
                <EditText
                    android:id="@+id/accountEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_defaultHeight"
                    android:layout_marginLeft="@dimen/horizontal_margin3"
                    android:layout_marginRight="@dimen/horizontal_margin3"
                    android:layout_marginTop="@dimen/default_marginTop"
                    android:gravity="center_vertical"
                    style="@style/EditText"
                    android:background="@drawable/style_edit_text"
                    android:hint="@string/user_nr_hint"
                    android:textColor="@color/viewBackground"
                    android:drawableLeft="@mipmap/icon_account"
                    android:drawableStart="@mipmap/icon_account"
                    android:drawablePadding="20dp"/>

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_defaultHeight"
                    android:layout_marginLeft="@dimen/horizontal_margin3"
                    android:layout_marginRight="@dimen/horizontal_margin3"
                    android:layout_marginTop="@dimen/default_marginTop"
                    style="@style/EditText"
                    android:background="@drawable/style_edit_text"
                    android:inputType="textPassword"
                    android:hint="@string/user_pwd_hint"
                    android:textColor="@color/viewBackground"
                    android:drawableLeft="@mipmap/icon_password"
                    android:drawableStart="@mipmap/icon_password"
                    android:drawablePadding="20dp"/>

                <CheckBox
                    android:id="@+id/rememberCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/horizontal_margin3"
                    android:layout_marginRight="@dimen/horizontal_margin3"
                    android:layout_marginTop="@dimen/default_marginTop"
                    android:button="@drawable/style_radio_button"
                    android:textSize="@dimen/text4"
                    android:text="@string/savepwd"
                    android:textColor="@color/text2"
                    android:paddingLeft="10dp"/>


                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_defaultHeight"
                    android:layout_marginLeft="@dimen/horizontal_margin5"
                    android:layout_marginRight="@dimen/horizontal_margin5"
                    android:layout_marginTop="@dimen/default_marginTop"
                    android:background="@drawable/style_button"
                    android:textColor="@color/textWhite"
                    android:text="@string/login" />
            </LinearLayout>


            <TextView
                android:id="@+id/ip_portTextView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="@dimen/default_marginTop"
                android:layout_above="@+id/versionTextView"
                android:textColor="@color/textWhite"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/setting"/>
            <TextView
                android:id="@+id/versionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:textSize="12sp"
                android:textColor="@color/text2"/>

        </RelativeLayout>

    </LinearLayout>


</com.cztek.concept.cargps.layout.FractionTranslateLayout>
