<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/viewForeground"
    android:orientation="vertical"
    android:padding="@dimen/horizontal_margin1"
    android:layout_marginTop="@dimen/item_default_marginTop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text3"
                android:textSize="@dimen/text3"
                android:text="@string/vinTitle"/>
            <TextView
                android:id="@+id/vinTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text1"
                android:textSize="@dimen/text2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
            <TextView
                android:id="@+id/stateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/item_default_marginTop"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text4" />
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_default_marginTop"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carTypeTitle"
            android:textColor="@color/text3"
            android:textSize="@dimen/text5" />

        <TextView
            android:id="@+id/carTypeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123"
            android:textColor="@color/text3"
            android:textSize="@dimen/text4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_default_marginTop"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4sTitle"
                android:textColor="@color/text3"
                android:textSize="@dimen/text5" />

            <TextView
                android:id="@+id/shopTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123"
                android:textColor="@color/text3"
                android:textSize="@dimen/text4" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_default_marginTop"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmShopTitle"
            android:textColor="@color/text3"
            android:textSize="@dimen/text5" />

        <TextView
            android:id="@+id/alarmShopTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123"
            android:textColor="@color/text3"
            android:textSize="@dimen/text4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_default_marginTop"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deviceNrTitile"
            android:textColor="@color/text3"
            android:textSize="@dimen/text5" />

        <TextView
            android:id="@+id/deviceNrTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123"
            android:textColor="@color/text3"
            android:textSize="@dimen/text4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_default_marginTop"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmTimeTitle"
            android:textColor="@color/text3"
            android:textSize="@dimen/text5" />

        <TextView
            android:id="@+id/alarmTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123"
            android:textColor="@color/text3"
            android:textSize="@dimen/text4" />
    </LinearLayout>


</LinearLayout>